--- a/package.json
+++ b/package.json
@@ -8,19 +8,21 @@
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "build": "node build/build.js",
-    "build:report":"npm_config_report=true node build/build.js",
+    "build:report": "npm_config_report=true node build/build.js",
     "lint": "eslint --ext .js,.vue src",
     "test": "npm run lint"
   },
   "dependencies": {
     "axios": "0.17.1",
     "element-ui": "2.0.8",
+    "file-saver": "^1.3.8",
     "js-cookie": "2.2.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "vue": "2.5.10",
     "vue-router": "3.0.1",
-    "vuex": "3.0.1"
+    "vuex": "3.0.1",
+    "xlsx": "^0.12.8"
   },
   "devDependencies": {
     "autoprefixer": "7.2.3",
@@ -54,6 +56,7 @@
     "postcss-loader": "2.0.9",
     "rimraf": "2.6.2",
     "sass-loader": "6.0.6",
+    "script-loader": "^0.7.2",
     "semver": "5.4.1",
     "shelljs": "0.7.8",
     "svg-sprite-loader": "3.5.2",
