--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
   },
   "dependencies": {
     "axios": "0.17.1",
-    "element-ui": "2.0.8",
+    "element-ui": "^2.2.0",
     "file-saver": "^1.3.8",
     "js-cookie": "2.2.0",
+    "js-md5": "^0.7.3",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "vue": "2.5.10",
