--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "0.17.1",
+    "babel-polyfill": "^6.26.0",
     "element-ui": "^2.2.0",
     "file-saver": "^1.3.8",
     "js-cookie": "2.2.0",
