--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "0.17.1",
     "element-ui": "^2.2.0",
     "file-saver": "^1.3.8",
+    "jquery": "^3.3.1",
     "js-cookie": "2.2.0",
     "js-md5": "^0.7.3",
     "normalize.css": "7.0.0",
